--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">Goose Eye</string>
+    <string name="button_back_text">Back</string>
+    <string name="pg_text">13+</string>
+    <string name="name_text">Avengers:\nEnd Game</string>
+    <string name="tag_line_text">Action, Adventure, Fantasy</string>
+    <string name="review_text">125 REVIEWS</string>
+    <string name="story_line_text">Storyline</string>
+    <string name="story_line_details_text">After the devastating events of Avengers: Infinity War,
+        the universe is in ruins. With the help of remaining allies, the Avengers assemble once
+        more in order to reverse Thanos&quot; actions and restore balance to the universe.</string>
+    <string name="cast_text">Cast</string>
+    <string name="robert_downey_text">Robert Downey Jr.</string>
+    <string name="chris_hemsworth_text">Chris Hemsworth</string>
+    <string name="mark_ruffalo">Mark Ruffalo</string>
+    <string name="chris_evans">Chris Evans</string>
 </resources>
